Fixed an issue with "screen" mix-blend-mode on Safari/Firefox

--- a/src/styles/2-modules/_cursor.scss
+++ b/src/styles/2-modules/_cursor.scss
@@ -10,7 +10,7 @@ body .cursor__ball {
   position: fixed;
   top: 0;
   left: 0;
-  mix-blend-mode: screen;
+  mix-blend-mode: multiply;
   z-index: 1000;
 }
 
